--- a/index.html
+++ b/index.html
@@ -51,25 +51,23 @@
     .board-slogan { font-style: italic; font-size: small; opacity: .9; }
     .top-right { margin-left: auto; text-align: right; font-family: 'Roboto', sans-serif; font-weight: 700; font-size: .96em; line-height: 1.4; max-width: 295px; }
     .top-right .contact-label {
-  color: #fff;
-  font-weight: bold;
-}
-  .top-right .contact-value,
-  .top-right .contact-value a {
-    color: #ffe066;
-    font-weight: 600;
-    text-decoration: underline dotted;
-  }
-  .top-right .contact-value a:hover {
-    color: #fff;
-  }
-
+      color: #fff;
+      font-weight: bold;
+    }
+    .top-right .contact-value,
+    .top-right .contact-value a {
+      color: #ffe066;
+      font-weight: 600;
+      text-decoration: underline dotted;
+    }
+    .top-right .contact-value a:hover {
+      color: #fff;
+    }
     .top-right br { display: block; margin-bottom: 3px; }
     .top-right { font-size: 1em; }
     @media (max-width: 900px) {
       .top-right { text-align: left; font-size: 1em; max-width: none; }
     }
-
     .nav-bar {
       background: #fff;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -196,7 +194,6 @@
       .submenu.show { display: block !important; }
       .submenu-toggle { display: flex; }
       .submenu li a { padding: 10px 32px;}
-      .nav-buttons { margin-top: 10px; }
     }
     @media (max-width: 600px) {
       .top-bar {
@@ -209,18 +206,38 @@
       }
       .nav-buttons {
         flex-direction: column;
-        gap: 8px;
+        gap: 12px;
         width: 100%;
+        padding: 0 18px;
+        margin-bottom: 12px;
+        box-sizing: border-box;
       }
       .nav-buttons a {
         width: 100%;
         box-sizing: border-box;
         text-align: center;
         font-size: 1em;
+        border-radius: 7px;
+        box-shadow: 0 2px 8px 0 rgba(1,46,90,0.06);
       }
       body, html {
         overflow-x: hidden;
         width: 100vw !important;
+      }
+    }
+    @media (min-width: 601px) and (max-width:900px) {
+      .nav-buttons {
+        flex-direction: column;
+        gap: 12px;
+        width: 100%;
+        padding: 0 38px;
+        margin-bottom: 12px;
+        box-sizing: border-box;
+      }
+      .nav-buttons a {
+        width: 100%;
+        border-radius: 8px;
+        box-shadow: 0 2px 8px 0 rgba(1,46,90,0.06);
       }
     }
     @media (min-width: 901px) {
@@ -230,8 +247,9 @@
         display: block !important;
       }
       .submenu { display: none; }
+      .nav-buttons { gap: 10px; padding: 0; margin: 0;}
+      .nav-buttons a { width: auto; box-shadow: none;}
     }
-    /* Hero/Carousel styles below --- */
     .hero {
       position: relative;
       min-height: var(--hero-height);
@@ -503,22 +521,21 @@
       </div>
     </div>
     <div class="top-right">
-  <span class="contact-label">Address:</span>
-  <span class="contact-value">601 57th Street SE, Suite 5, Charleston, WV 25304</span><br>
-  <span class="contact-label">Phone:</span>
-  <span class="contact-value">
-    <a href="tel:+13045583570">(304) 558-3570</a> | 
-    <a href="tel:+18006544406">(800) 654-4406</a>
-  </span><br>
-  <span class="contact-label">Fax:</span>
-  <span class="contact-value">(304) 957-7522</span><br>
-  <span class="contact-label">Email:</span>
-  <span class="contact-value">
-    <a href="mailto:CPRB@wv.gov">CPRB@wv.gov</a>
-  </span><br>
-  <span class="contact-note">Don’t send personal info via plain email; contact CPRB securely.</span>
-</div>
-
+      <span class="contact-label">Address:</span>
+      <span class="contact-value">601 57th Street SE, Suite 5, Charleston, WV 25304</span><br>
+      <span class="contact-label">Phone:</span>
+      <span class="contact-value">
+        <a href="tel:+13045583570">(304) 558-3570</a> | 
+        <a href="tel:+18006544406">(800) 654-4406</a>
+      </span><br>
+      <span class="contact-label">Fax:</span>
+      <span class="contact-value">(304) 957-7522</span><br>
+      <span class="contact-label">Email:</span>
+      <span class="contact-value">
+        <a href="mailto:CPRB@wv.gov">CPRB@wv.gov</a>
+      </span><br>
+      <span class="contact-note">Don’t send personal info via plain email; contact CPRB securely.</span>
+    </div>
   </div>
   <nav class="nav-bar">
     <button class="nav-toggle" aria-label="Toggle menu">&#9776;</button>
@@ -793,7 +810,6 @@ document.addEventListener('DOMContentLoaded', function() {
   const submenuToggles = document.querySelectorAll('.submenu-toggle');
   const submenus = document.querySelectorAll('.submenu');
 
-  // Hamburger logic
   navToggle.addEventListener('click', function(e) {
     e.stopPropagation();
     mainMenu.classList.toggle('open');
@@ -802,21 +818,18 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   });
 
-  // Submenu logic: open/close per category, only one open at a time, no hamburger reset needed
   submenuToggles.forEach(function(btn) {
     btn.addEventListener('click', function(e) {
       e.stopPropagation();
       if (window.innerWidth > 900) return;
       const submenu = btn.nextElementSibling;
       const isOpen = submenu.classList.contains('show');
-      // close others
       submenus.forEach(sub => {
         if (sub !== submenu) sub.classList.remove('show');
       });
       submenuToggles.forEach(otherBtn => {
         if (otherBtn !== btn) otherBtn.setAttribute('aria-expanded', 'false');
       });
-      // toggle
       if (!isOpen) {
         submenu.classList.add('show');
         btn.setAttribute('aria-expanded', 'true');
@@ -836,7 +849,6 @@ document.addEventListener('DOMContentLoaded', function() {
     });
   }
 
-  // Close menus when clicking outside nav on mobile
   document.addEventListener('click', function(e) {
     if (window.innerWidth <= 900) {
       if (!mainMenu.contains(e.target) && e.target !== navToggle) {
@@ -853,7 +865,6 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   });
 
-  // Close nav when submenu link is tapped on mobile
   submenus.forEach(function(sub) {
     sub.querySelectorAll('a').forEach(function(link) {
       link.addEventListener('click', function() {
@@ -865,7 +876,6 @@ document.addEventListener('DOMContentLoaded', function() {
     });
   });
 
-  // Carousel logic
   const leftSlides = document.querySelectorAll('.carousel-left .slide');
   const leftDots   = document.querySelectorAll('.carousel-left-dots .dot');
   let leftIndex = 0;
@@ -894,7 +904,6 @@ document.addEventListener('DOMContentLoaded', function() {
   });
   scheduleNext();
 
-  // Panels (ABOUT US) logic
   const panels = document.querySelectorAll('.panel');
   panels.forEach(panel => {
     panel.querySelector('h2').addEventListener('click', e => {
@@ -907,17 +916,14 @@ document.addEventListener('DOMContentLoaded', function() {
     panels.forEach(p => p.classList.remove('open'));
   });
 
-  // Mobile Hero Card: Expand Active Members submenu in nav
   document.getElementById('showActiveMembersMenu').addEventListener('click', function(e) {
     e.preventDefault();
     const submenuLinks = document.getElementById('activeMembersLinks');
     submenuLinks.classList.toggle('show');
-    // Also open nav and Active Members dropdown if on mobile
     if(window.innerWidth <= 900) {
       if (!mainMenu.classList.contains('open')) {
         mainMenu.classList.add('open');
       }
-      // Find Active Members in nav and open submenu
       const navItems = document.querySelectorAll('.main-menu > li');
       navItems.forEach(li => {
         if (li.querySelector('a') && li.querySelector('a').textContent.trim() === 'Active Members') {
@@ -935,7 +941,6 @@ document.addEventListener('DOMContentLoaded', function() {
       }, 180);
     }
   });
-
 });
   </script>
 </body>
