--- a/index.html
+++ b/index.html
@@ -80,38 +80,16 @@
       width: 100%;
       z-index: 99;
     }
-   .nav-toggle {
-  display: flex;
-  align-items: center;
-  gap: 14px;           /* sets space between icon and MENU */
-  background: #e9f3fe;
-  border: 2px solid #0164cb;
-  border-radius: 12px;
-  color: #012e5a;
-  font-weight: 700;
-  font-size: 1.15em;
-  padding: 12px 24px;
-  box-shadow: 0 2px 6px rgba(1,46,90,0.07);
-  cursor: pointer;
-  transition: border 0.2s, background 0.2s;
-  margin-left: 17px;
-}
-.nav-toggle:focus,
-.nav-toggle:hover {
-  background: #d7eafe;
-  border-color: #005bb5;
-}
-
-
-.nav-toggle:hover, .nav-toggle:focus {
-  background: #d3e0ee;
-  border-color: #005bb5;
-}
-@media (max-width: 900px) {
-  .nav-toggle { display: flex; }
-}
-
-
+    .nav-toggle {
+      display: none;
+      background: none;
+      border: none;
+      font-size: 2em;
+      color: #012e5a;
+      margin-right: 10px;
+      z-index: 1002;
+      cursor: pointer;
+    }
     .main-menu {
       list-style: none;
       display: flex;
@@ -562,15 +540,7 @@
     </div>
   </div>
   <nav class="nav-bar">
-  <button class="nav-toggle" aria-label="Open menu">
-    <svg width="30" height="30" viewBox="0 0 32 32" style="vertical-align:middle; margin-right: 14px;" aria-hidden="true">
-      <polyline points="8,12 16,20 24,12" fill="none" stroke="#012e5a" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
-    <span style="font-weight:700; font-size:1.15em; letter-spacing:0.5px; color:#012e5a;">MENU</span>
-  </button>
-</nav>
-
-
+    <button class="nav-toggle" aria-label="Toggle menu">&#9776;</button>
     <ul class="main-menu">
       <li>
         <a href="Board-Agenda.html">Board of Trustees</a>
@@ -649,7 +619,6 @@
   <path d="M20 16.942c-1.413 0-2.759.276-4 .762 4.095 1.601 7 5.576 7 10.238A3.058 3.058 0 0 1 19.942 31h8A3.058 3.058 0 0 0 31 27.942c0-6.075-4.925-11-11-11zM20 1a5.97 5.97 0 0 0-4 1.537 5.978 5.978 0 0 1 0 8.926A5.97 5.97 0 0 0 20 13a6 6 0 1 0 0-12z"/>
   <path d="M27.942 32h-8a1 1 0 1 1 0-2A2.06 2.06 0 0 0 22 27.942c0-4.142-2.498-7.795-6.364-9.307a1 1 0 0 1 0-1.863c1.408-.55 2.877-.83 4.364-.83 6.617 0 12 5.384 12 12A4.062 4.062 0 0 1 27.942 32zm-4.504-2h4.504A2.06 2.06 0 0 0 30 27.942c0-5.514-4.486-10-10-10-.419 0-.836.027-1.251.08C22.004 20.22 24 23.886 24 27.942c0 .75-.205 1.454-.562 2.058zM20 14a6.984 6.984 0 0 1-4.667-1.792.999.999 0 0 1-.001-1.489C16.392 9.77 17 8.413 17 7s-.607-2.768-1.668-3.72a1.002 1.002 0 0 1 .001-1.488A6.984 6.984 0 0 1 20 0c3.86 0 7 3.14 7 7s-3.14 7-7 7zm-2.503-2.677c.758.44 1.62.677 2.503.677 2.757 0 5-2.243 5-5s-2.243-5-5-5c-.884 0-1.745.236-2.503.677C18.463 3.903 19 5.426 19 7s-.537 3.097-1.503 4.323z"/>
 </svg>
-
         </span>
         Member/Retiree Self Service
       </a>
