--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     .submenu-toggle {
       display: none;
       position: absolute;
-      right: 0; top: 0; height: 40px; width: 48px;
+      right: 50px; top: 0; height: 40px; width: 48px;
       background: none; border: none; color: #012e5a;
       font-size: 1.5em; z-index: 6;
       cursor: pointer;
@@ -222,6 +222,7 @@
         gap: 0;
         padding: 0;
       }
+      
       .main-menu.open { display: flex; }
       .main-menu > li { width: 100%; }
       .main-menu > li > a { padding: 15px 24px; display: block;}
