Add index.html and Images folder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       --panel-shadow: rgba(0,0,0,0.14);
       --hero-height: 75vh;
       --footer-bg: #012e5a;
-      --hero-mobile-bg: #0b3562;
+      --hero-mobile-bg: #012e5a;
     }
     * { margin:0; padding:0; box-sizing:border-box; }
     html { scroll-behavior: smooth; }
