--- a/PERS.html
+++ b/PERS.html
@@ -676,6 +676,16 @@
   </div>
 </main>
     </div>
+<footer class="footer">
+    <div class="footer-container">
+      <div class="footer-logo">
+        <img src="Images/WV.png" alt="WV State Logo">
+      </div>
+      <div class="footer-text">
+        CPRB © 2025 – State of West Virginia – The materials contained herein are intended for general guidance purposes only. In the event of any discrepancy, the State Code and Rules prevail. |
+        <a href="PrivacyPolicy.html">Privacy Policy Notice</a>
+      </div>
+    </div>
   </footer>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
