--- a/GASB68-TRS.html
+++ b/GASB68-TRS.html
@@ -65,6 +65,28 @@
       .nav-bar .main-menu,
       .nav-bar .nav-buttons { display: none !important; }
     }
+        /* 1. This fixes the overflow bug permanently */
+    .offcanvas-list > li > a {
+        box-sizing: border-box; 
+    }
+
+    /* 2. This hides the old, problematic HTML button arrow */
+    .offcanvas-submenu-toggle {
+        display: none !important;
+    }
+
+    /* 3. This creates a new, perfect arrow for every menu item that has a submenu */
+    .offcanvas-list > li:has(.offcanvas-submenu) > a::after {
+        content: '▼';
+        font-size: 0.8em;
+        opacity: 0.7;
+        transition: transform 0.2s ease-in-out;
+    }
+
+    /* 4. This rotates the new arrow when a menu is open */
+    .offcanvas-list > li.active > a::after {
+        transform: rotate(180deg);
+    }
     @media (min-width: 901px) {
       .nav-toggle { display: none; }
       .main-menu { display: flex !important; }
@@ -146,7 +168,8 @@
       .offcanvas-list > li.active > a { background: #e9f3fe; color: #0066cc; }
       .offcanvas-submenu-toggle {
         background: none; border: none; color: #012e5a; font-size: 1.1em; margin-left: 0px; cursor: pointer;
-        pointer-events: none;
+        pointer-events: none; box-sizing: border-box; 
+};
       }
       .offcanvas-submenu { display: none; background: #f7fafd; padding: 0; border-bottom: 1px solid #e6e6e6; }
       .offcanvas-submenu.show { display: block; }
