--- a/index.html
+++ b/index.html
@@ -361,6 +361,28 @@
       body {
         background: var(--hero-mobile-bg);
       }
+            /* 1. This fixes the overflow bug permanently */
+      .offcanvas-list > li > a {
+          box-sizing: border-box; 
+      }
+
+      /* 2. This hides the old, problematic HTML button arrow */
+      .offcanvas-submenu-toggle {
+          display: none !important;
+      }
+
+      /* 3. This creates a new, perfect arrow for every menu item that has a submenu */
+      .offcanvas-list > li:has(.offcanvas-submenu) > a::after {
+          content: '▼';
+          font-size: 0.8em;
+          opacity: 0.7;
+          transition: transform 0.2s ease-in-out;
+      }
+
+      /* 4. This rotates the new arrow when a menu is open */
+      .offcanvas-list > li.active > a::after {
+          transform: rotate(180deg);
+      }
       .mobile-hero-section {
         background: var(--hero-mobile-bg);
         min-height: 440px;
