--- a/TRS-forms.html
+++ b/TRS-forms.html
@@ -107,6 +107,27 @@
         display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
         background: rgba(1,46,90,0.32); z-index: 1100;
       }
+      .offcanvas-list > li > a {
+    box-sizing: border-box; 
+}
+
+/* This hides the old */
+.offcanvas-submenu-toggle {
+    display: none !important;
+}
+
+
+.offcanvas-list > li:has(.offcanvas-submenu) > a::after {
+    content: '▼';
+    font-size: 0.8em;
+    opacity: 0.7;
+    transition: transform 0.2s ease-in-out;
+}
+
+
+.offcanvas-list > li.active > a::after {
+    transform: rotate(180deg);
+}
       .offcanvas-backdrop.show { display: block; }
       .offcanvas-menu {
         display: flex; flex-direction: column; position: fixed; top: 0; left: -80vw;
@@ -488,7 +509,7 @@
   </div>
   <!-- MAIN CONTENT -->
   <div class="content-panel">
-    <div class="highlight-head">TEACHERS' RETIREMENT SYSTEM (TRS) Forms</div>
+    <div class="highlight-head"><b>TEACHERS' RETIREMENT SYSTEM (TRS) Forms</b></div>
     <ul class="trs-forms-list">
       <li><a href="Forms/WVTF0084.pdf" target="_blank">Application to Purchase Out of State Service for Full Time Teaching Personnel</a></li>
       <li><a href="Forms/WVAF0005.pdf" target="_blank">Authorization to Release Information</a></li>
