new changes to highlights

--- a/index.html
+++ b/index.html
@@ -843,6 +843,14 @@
                 </li>
                 <li class="news-item">
                   <p class="news-title">
+                    <a href="SB712-2025.pdf" target="_blank">New Requirements for "Returning to Work after Retirement"</a>
+                  </p>
+                  <p class="news-desc">
+                    Bona fide separation from service upon retirement.
+                  </p>
+                </li>
+                <li class="news-item">
+                  <p class="news-title">
                     <a href="Forms/911Cert-2024.pdf" target="_blank">
                       911 Transfer Election Results Certification
                     </a>
@@ -1090,5 +1098,3 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
-
-<h1></h1>
