--- a/Tutorial-ESSregistration.html
+++ b/Tutorial-ESSregistration.html
@@ -572,15 +572,18 @@
 </main>
 
  <!-- FOOTER -->
-  <footer>
-    <div class="footer-container">
-      <img src="Images/WV.png" alt="WV State Logo">
-      <div class="footer-text">
-        CPRB © 2025 – State of West Virginia – The materials contained herein are intended for general guidance purposes only. In the event of any discrepancy, the State Code and Rules prevail. |
-        <a href="PrivacyPolicy.html">Privacy Policy Notice</a>
-      </div>
+  <footer class="footer">
+  <div class="footer-container">
+    <img src="Images/WV.png" alt="WV State Logo" style="width:50px" />
+    <div class="footer-text">
+      CPRB © 2025 – State of West Virginia – The materials contained herein are intended
+      for general guidance only. In the event of any discrepancy between this site and
+      the WV Code & Rules, the Code & Rules prevail. |
+      <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
+      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
-  </footer>
+  </div>
+</footer>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
