--- a/Location.html
+++ b/Location.html
@@ -601,16 +601,17 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <div class="footer-container">
-      <div class="footer-logo">
-        <img src="Images/WV.png" alt="WV State Logo">
-      </div>
-      <div class="footer-text">
-        CPRB © 2025 – State of West Virginia – For general guidance only. In the event of any discrepancy, State Code and Rules prevail. |
-        <a href="PrivacyPolicy.html">Privacy Policy Notice</a>
-      </div>
+  <div class="footer-container">
+    <img src="Images/WV.png" alt="WV State Logo" style="width:50px" />
+    <div class="footer-text">
+      CPRB © 2025 – State of West Virginia – The materials contained herein are intended
+      for general guidance only. In the event of any discrepancy between this site and
+      the WV Code & Rules, the Code & Rules prevail. |
+      <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
+      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report a Issue</a>
     </div>
-  </footer>
+  </div>
+</footer>
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
