new footer chnages all the same

--- a/Board-Agenda.html
+++ b/Board-Agenda.html
@@ -571,7 +571,7 @@
         <li><strike>Jan 29 2025</strike> – <a href="Forms/Agenda2025-1-29.pdf" target="_blank">Agenda</a></li>
         <li><strike>Mar 19 2025</strike> – <a href="Forms/Agenda3-19-2025.pdf" target="_blank">Agenda</a></li>
         <li><strike>May 14 2025</strike> – <a href="Forms/Agenda5-14-2025.pdf" target="_blank">Agenda</a></li>
-        <li>Jul 9 2025 – <a href="Forms/Agenda7-9-2025.pdf" target="_blank">Agenda</a></li>
+        <li><strike>Jul 9 2025</strike> – <a href="Forms/Agenda7-9-2025.pdf" target="_blank">Agenda</a></li>
         <li>Aug 20 2025 – <a href="Forms/Agenda8-20-2025.pdf" target="_blank">Agenda</a></li>
         <li>Oct 8 2025 – Fiduciary Training (Stonewall Resort)</li>
         <li>Dec 3 2025 – <a href="Forms/Agenda12-3-2025.pdf" target="_blank">Agenda</a></li>
